--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 					<div class="logo ">
 						<h1>
 							<a href="index.html">
-								个人
-								<span>主页</span>
+									personal 
+								<span>homepage</span>
 							</a>
 						</h1>
 					</div>
@@ -24,23 +24,26 @@
 						<ul class="nav navbar-nav">
 							<li class="active col-md-12">
 								<a href="#introduce">
+									<span class="span4">&#xe601;</span>
 									<i class="home"></i>个人介绍
 								</a>
 							</li>
 							<li class="active1 col-md-12">
 								<a href="#person_skill">
-									<span class="span1"></span>
+									<span class="span1">&#xe603;</span>
 									<i class="picture1 ">
 									</i>个人技能
 								</a>
 							</li>
 							<li class="active1 col-md-12">
 								<a href="#guanyu">
+									<span class="span2">&#xe608;</span>
 									<i class="edit1 "></i>关于我
 								</a>
 							</li>
 							<li class="active1 col-md-12">
 								<a href="#email">
+									<span class="span3">&#xe604;</span>
 									<i class="email "></i>联系方式
 								</a>
 							</li>
@@ -50,7 +53,16 @@
 				<div class="col-md-9 display_right">
 					<div id="introduce">
 						<div class="display_right_top ">
-							<img src="img/100.jpg" alt="">
+							<img src="img/1.jpg" alt="" class="active">
+							<img src="img/2.jpg" alt="">
+							<img src="img/3.jpg" alt="">
+							<img src="img/4.jpg" alt="">
+							<ul class="yuandian">
+								<li class="active"></li>
+								<li ></li>
+								<li ></li>
+								<li ></li>
+							</ul>
 						</div>
 						<div class="clearfix"></div>
 						<div class="display_right_top_bottom">
@@ -158,7 +170,7 @@
 								</a>
 							</div>
 							<div class="person_skill_bottom_item col-sm-4 col-md-6 ">
-								<a href="https://kuaiyi1.github.io/yiju/index.html">
+								<a href="https://kuaiyi1.github.io/yiju1/">
 									<img src="img/jiaju.jpg" alt="" class="">
 								</a>
 							</div>
@@ -168,8 +180,19 @@
 								</a>
 							</div>
 							<div class="person_skill_bottom_item col-sm-4 col-md-6">
-								<a href="https://kuaiyi1.github.io/Bootstrap/index1.html">
-									<img src="img/103.jpg" alt="" class="">
+								<a href="https://kuaiyi1.github.io/tianmao/index.html">
+									<img src="img/tianmao.jpg" alt="" class="">
+								</a>
+							</div>
+
+							<div class="person_skill_bottom_item col-sm-4 col-md-6 ">
+								<a href="https://kuaiyi1.github.io/tianqiApp/">
+									<img src="img/weather.jpg" alt="" class="">
+								</a>
+							</div>
+							<div class="person_skill_bottom_item col-sm-4 col-md-6">
+								<a href="https://kuaiyi1.github.io/todolist/web.html">
+									<img src="img/todo.jpg" alt="" class="">
 								</a>
 							</div>
 						</div>
@@ -206,6 +229,7 @@
 						</div>
 						<div class="guanyu_item col-md-4">
 							<figure class="guanyu_item_top">
+								<!-- <div class="guanyu_xiahua"></div> -->
 								<a href="">
 									<img src="img/5.jpg" alt="">
 								</a>
@@ -261,4 +285,5 @@
 		</div>
 	</div>
 </body>
+<script src="js/index.js"></script>
 </html>
